Remove "margin: 0"; too hard to read running up against the window mgr border. A few factual corrections to the index page
git-svn-id: https://pywebsvcs.svn.sourceforge.net/svnroot/pywebsvcs/trunk@1053 7150bf37-e60d-0410-b93f-83e91ef0e581

--- a/pywebsvcs.sourceforge.net/site.css
+++ b/pywebsvcs.sourceforge.net/site.css
@@ -6,8 +6,8 @@ body {
   font: 69% "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
   background-color: White;
   color: Black;
-  margin: 0;
-  padding: 0;
+  /*margin: 0;*/
+  /*padding: 0;*/
 }
 
 table {
